tests/invalid/bytes_from_str_no_encoding/main.py
def main() -> None:
    x: bytes = bytes("!23")
